Updated sample database

--- a/src/SetupTemplateDatabase/SetupTemplateDatabase.csproj
+++ b/src/SetupTemplateDatabase/SetupTemplateDatabase.csproj
@@ -11,8 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Scripts\0001 - hello_world.sql" />
-    <EmbeddedResource Include="Scripts\0001 - hello_world.sql" />
+    <EmbeddedResource Include="Scripts\0001 - initial setup.sql" />
   </ItemGroup>
 
 </Project>
